chore: create table with liquibase

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,4 +6,4 @@ spring:
   application:
     name: class-registration
   liquibase:
-    enabled: false
+    change-log: classpath:/db/changelog/db.changelog-master.xml
